feat: Update primary colors and gradients
Replaces old primary and secondary accent colors with a fresh green palette. This includes updating the main primary color in Tailwind config, and adjusting gradient colors used in hero, features, and pricing sections to align with the new branding. Background blob colors are also updated to match.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         theme: {
           extend: {
             colors: {
-              primary: "#1111d4",
+              primary: "#00a76f",
               "background-light": "#f6f6f8",
               "background-dark": "#0a0a1a",
               "card-light": "#ffffff",
