--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
         theme: {
           extend: {
             colors: {
-              primary: "#00a76f",
-              "background-light": "#f6f6f8",
-              "background-dark": "#0a0a1a",
-              "card-light": "#ffffff",
-              "card-dark": "#16162a",
+              primary: "#2C3E50", // Soft Navy
+              secondary: "#BC9C6B", // Champagne Gold
+              accent: "#BC9C6B",
+              "background-light": "#F9F6F2", // Warm Nude
+              "background-dark": "#1A252F", // Darker Navy
+              "card-light": "#FFFFFF",
+              "card-dark": "#24313E",
+              charcoal: "#3C3C3C"
             },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
@@ -90,6 +93,7 @@
         scroll-behavior: smooth;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        color: #3C3C3C;
       }
       
       /* Hardware acceleration to prevent flicker */
@@ -117,16 +121,20 @@
         background: transparent;
       }
       ::-webkit-scrollbar-thumb {
-        background: #cbd5e1;
+        background: #BC9C6B;
         border-radius: 10px;
       }
       .dark ::-webkit-scrollbar-thumb {
-        background: #334155;
+        background: #BC9C6B;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #94a3b8;
+        background: #A68A5D;
       }
     </style>
+    <script type="module">
+      import { GoogleGenAI } from "https://esm.sh/@google/genai@^1.34.0";
+      window.GoogleGenAI = GoogleGenAI;
+    </script>
     <script type="importmap">
 {
   "imports": {
@@ -140,9 +148,8 @@
 }
 </script>
   </head>
-  <body class="bg-background-light dark:bg-background-dark text-slate-900 dark:text-slate-100 transition-colors duration-300">
+  <body class="bg-background-light dark:bg-background-dark text-charcoal dark:text-slate-100 transition-colors duration-300">
     <div id="root"></div>
-    <!-- Script entry point is required for ES modules in the browser -->
     <script type="module" src="index.tsx"></script>
   </body>
 </html>
